<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tile Puzzle</string>
    <string name="dialog_title">Gratulálok!</string>
    <string name="button_ok">OK</string>
    <string name="button_2">2 x 2</string>
    <string name="button_3">3 x 3</string>
    <string name="button_4">4 x 4</string>
    <string name="button_5">5 x 5</string>
    <string name="button_6">6 x 6</string>
    <string name="menu_settings">Settings</string>
    <string name="highscore">High Scores</string>
    <string name="reset_highscore">Reset High Scores</string>
    
</resources>